--- a/style.css
+++ b/style.css
@@ -90,8 +90,10 @@ body::-webkit-scrollbar-thumb {
 .scroll-snap{
     scroll-snap-align: center;
 }
+
 /* ==========================================*/
 /*================== nav =======================*/
+
 .nav{
     display: flex;
     justify-content: space-around;
@@ -107,7 +109,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav .items {
-    gap: 6.25rem;
+    gap: 5rem;
     display: flex;
     justify-content: space-around;
 }
@@ -122,11 +124,8 @@ body::-webkit-scrollbar-thumb {
     color: var(--gold-200);
     text-shadow: var(--shadow-text-light);
 }
+
 /*==================================================*/
-
-
-
-
 /*================== APRESENTATION =======================*/
 
 #background-video {
@@ -196,24 +195,25 @@ body::-webkit-scrollbar-thumb {
     text-align: justify;
 }
 
+/*=================================================*/
+/*================== about =======================*/
+
 .about{
-    height: 110vh;
+    height: 150vh;
     display: flex;
+
+    background-color: rgb(0, 0, 0, 0.7); 
+    padding: 8rem;
 }
 
-.presentation .about{
-    margin: 22rem auto 15rem auto;
-    width: 60rem;
-}
-
-.presentation .about .container{
+.about .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.presentation .about .container .separator{
+.about .container .separator{
     margin-bottom: 4rem;
     width: 20rem;
     height: 0.2rem;
@@ -221,42 +221,36 @@ body::-webkit-scrollbar-thumb {
     background-color: var(--gold-200);
 }
 
-.presentation .about .container .title{
+.about .container .title{
     color: var(--light);
     text-shadow: var(--shadow-text-strong);
 }
 
-.presentation .about .container .paragraphy{
+.about .container .paragraphy{
     color: var(--light);
     text-align: justify;
     text-shadow: var(--shadow-text-medium);
     margin: 1rem 0;
 }
-/*=======================================================*/
 
+/*=======================================================*/
 /*================== managenment =======================*/
+
 
 .management {
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color:  var(--gold-100);
-    min-height: 100vh;
-    padding-bottom: 30rem;
-}
-
-.management .point-scroll{
-    height: 1rem;
-    position: relative;
-    top: -11rem;
 }
 
 .management .card{
     display: flex;
     justify-content: center;
 
-    max-width: 50rem;
-    padding: 3.125rem;
+    width: 50rem;
+    max-width: 80vw;
+    padding: 2rem;
     position: relative;
     top: -6.25rem;
 
@@ -301,32 +295,32 @@ body::-webkit-scrollbar-thumb {
     margin: auto;
 }
 
-.management .values{
+ /*==================================================*/
+ /*================== VALUES =======================*/
+
+.values{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10rem;
+
+    min-height: 120vh;
+    background-color:  var(--gold-100);
+    padding: 20rem;
 }
 
-.management .values .point-scroll{
-    height: 1rem;
-    position: relative;
-    top: -4rem;
-}
-
-.management .values .header{
+.values .header{
     width: 10rem;
     display: flex;
     justify-content: center;
 }
 
-.management .values .header .title{
+.values .header .title{
     color: var(--gold);
     text-shadow: var(--shadow-text-light);
 }
 
-.management .values .separator{
+.values .separator{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -337,7 +331,7 @@ body::-webkit-scrollbar-thumb {
     background-color: var(--gold-200);
 }
 
-.management .values .separator .fa-chevron-down{
+.values .separator .fa-chevron-down{
     padding: 0.313rem;
     background-color: var(--gold-100);
     border-radius: 50%;
@@ -346,27 +340,31 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-.management .values .content{
+.values .content{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 70rem;
-}
-
-.management .values .overflow{
-    height: 20rem;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
 
     width: 100%;
 }
+
+.values .content img{
+    width: 8rem;
+}
+
+.values .overflow{
+    height: 20rem;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    width: 100%;
+}
   
-.management .values .content .overflow::-webkit-scrollbar { 
+.values .content .overflow::-webkit-scrollbar { 
 	display: none;
 }
 
 
-.management .values .content .overflow .text {
+.values .content .overflow .text {
     scroll-snap-align: start;
 
     display: flex;
@@ -375,6 +373,7 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
 
     padding: 8rem 0;
+    max-width: 100vw;
 }
 
 .overflow .value{
@@ -382,7 +381,7 @@ body::-webkit-scrollbar-thumb {
     text-shadow: var(--shadow-text-medium);
 }
 
-.management .divider-shadow{
+.divider-shadow{
     height: 0.2rem;
     width: 100%;
 
@@ -391,6 +390,7 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 0 0.5rem 1.5rem black;
 }
 
+/*=======================================================*/
 /*================== areas-expertise ===================*/
 
 .areas-expertise{
@@ -399,23 +399,21 @@ body::-webkit-scrollbar-thumb {
     justify-content: center;
     align-items: center;
     background-color: #dfd2a0;
-
-    padding: 5rem 8rem;
 }
 
 .areas-expertise .area{
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     height: 110vh;
+    max-width: 90vw;
 }
 
 .areas-expertise .area .title{
     color: var(--gold-200);
     text-shadow: var(--shadow-text-light);
-
+    min-width: 10rem;
 }
 
 .areas-expertise .area .separator{
@@ -424,7 +422,7 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
     width: 0.2rem;
     height: 8rem;
-
+    margin: 0 2rem;
     background-color: var(--gold-200);
 }
 
@@ -433,30 +431,29 @@ body::-webkit-scrollbar-thumb {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-
 }
 
 
 .areas-expertise .area .subtitle{
     color:var(--gold-300);
     margin: 0.5rem;
-    width: 40rem;
+    max-width: 40rem;
+    text-align: justify;
 }
 
 .areas-expertise .acting{
     width: 100%;
-
+    margin-bottom: 50rem;
 }
 
 .areas-expertise .acting .row{
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
 .areas-expertise .acting .row .card{
-    height: 14rem;
+    height: 12rem;
     width: 14rem;
 
     background-position: center;
@@ -475,7 +472,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
 
     background-color: rgba(80, 74, 53, 0.8);
-    padding: 2rem;
+    padding: 1rem;
 
     transition: 1.5s;
 }
@@ -486,12 +483,12 @@ body::-webkit-scrollbar-thumb {
 
 .areas-expertise .acting .row .card span{
     color: var(--light);
-    margin-top: 2.5rem;
 
     text-shadow: var(--shadow-text-medium);
     color: var(--gold);
 }
 
+/*================================================*/
 /*================== Team =======================*/
 
 .team{
@@ -539,7 +536,7 @@ body::-webkit-scrollbar-thumb {
     text-shadow: var(--shadow-text-medium);
 }
 
-
+/*========================================================*/
 /*================== informations =======================*/
 
 .informations{
@@ -548,15 +545,9 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
-    height: 110vh;
-    padding: 0 2rem;
-}
-
-.informations .header{
-    padding: 10rem 20rem 0 20rem;
-    margin-bottom: 5rem;
+    min-height: 100vh;
 }
 
 .informations .header .title{
@@ -568,6 +559,9 @@ body::-webkit-scrollbar-thumb {
     text-align: justify;
     color: var(--light);
     text-shadow: var(--shadow-text-medium);
+
+    width: 60rem;
+    max-width: 90vw;
 }
 
 .informations .container{
@@ -631,8 +625,9 @@ body::-webkit-scrollbar-thumb {
     cursor: pointer;
 }
 
-
+/*==================================================*/
 /*================== Footer =======================*/
+
  footer{
     padding: 1.563rem;
     display: flex;
@@ -651,6 +646,10 @@ body::-webkit-scrollbar-thumb {
     cursor: pointer;
  }
 
+ /*====================================================*/
+ /*================== ANIMAÇÃO =======================*/
+
+
   
  @keyframes slidein {
     from{
@@ -661,4 +660,98 @@ body::-webkit-scrollbar-thumb {
         opacity: 1;
         transform: translateX(0)
     }
-  }
+}
+
+ /*==========================================================*/
+ /*================== RESPONSIVIDADE =======================*/
+
+  @media (max-width: 1000px)
+{
+    html {
+        font-size: 82.75%;
+    }
+}
+
+@media (max-width: 600px)
+{
+    html {
+        font-size: 55.75%;
+    }
+
+    .presentation{
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .presentation .card{
+        margin: 10rem 0;
+    }
+
+    .about{
+        padding: 4rem;
+    }
+
+
+    .management .card{
+        padding: 0;
+    }
+
+    .values{
+        padding: 2rem;
+    }
+
+    .areas-expertise .acting .row:first-child{
+        position: relative;
+        top: -5rem;
+    }
+
+    .areas-expertise .acting .row:last-child{
+        position: relative;
+        top: 5rem;
+    }
+
+    .areas-expertise .acting .row .card{
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .areas-expertise .acting .row .card span{
+        font-size: var(--font-size-small);
+    }
+
+    .team{
+        display: flex;
+        flex-direction: column;
+        
+        min-height: 110vh;
+        padding: 5rem;
+    }
+
+    .team .separator{
+        display: none;
+    }
+
+    .team .message{
+        margin: 5rem 0;
+        border-top: .2rem solid var(--gold-200);
+        border-bottom: .2rem solid var(--gold-200);
+        padding: 2rem 0;
+    }
+
+    .team .message .text{
+        text-align: justify;
+    }
+
+    .informations .container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    iframe{
+        max-width: 75vw;
+        max-height: 20rem;
+    }
+}
